@@ -1,3 +1,8 @@
+TAG: dlautils-4-2-0-5
+DATE: 04/23/2009
+STAFF: sc
+CHANGES: JobStreamTemplate.sh updated to use checkStatus
+
 TAG: dlautils-4-2-0-4
 TAG: dlautils-4-2-0-3
 DATE: 03/17/2009
